--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -44,9 +44,7 @@
 
 .about-label {
   font-family: Titan One;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
+  @include font(400, 18px, 1.166);
   text-align: center;
   text-transform: uppercase;
   color: var(--bright-accent-color);
@@ -64,22 +62,18 @@
 
 .about-title {
   font-family: Titan One;
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 39px;
+  @include font(400, 36px, 1.08);
   text-align: center;
   text-transform: uppercase;
   color: var(--dark-accent-color);
   margin-bottom: 26px;
   margin-top: 0;
   @media screen and (min-width: 772px) {
-    font-size: 48px;
-    line-height: 55px;
+    @include font(400, 48px, 1.146);
     margin-bottom: 50px;
   }
   @media screen and (min-width: 1280px) {
-    font-size: 58px;
-    line-height: 66px;
+    @include font(400, 58px, 1.138);
     margin-bottom: 55px;
   }
 }
@@ -114,20 +108,17 @@
 }
 
 .about-text {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 162%;
+  @include font(500, 12px, 1.62);
   display: block;
   padding-left: 30px;
   padding-right: 30px;
   @media screen and (min-width: 772px) {
     padding-left: 0;
     padding-right: 0;
-    font-size: 14px;
-    line-height: 176%;
+    @include font(500, 14px, 1.76);
   }
   @media screen and (min-width: 1280px) {
-    font-size: 16px;
+    @include font(500, 16px, 1.75);
   }
   &.first {
     color: var(--primary-text-color);
@@ -157,9 +148,7 @@
   background-color: var(--button-color);
   border-radius: 22px;
   border-color: transparent;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 18px;
+  @include font(700, 14px, 1.285);
   display: flex;
   margin-left: 30px;
   align-items: center;
