--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -13,3 +13,11 @@
     font-size: $fs * 1px;
     line-height: $lh-my;
 }
+
+@mixin font($fw, $fs, $lh) {
+	  font-weight: $fw;
+	  font-size: $fs;
+	  line-height: $lh;
+	}
+
+    /* @include font(700, 18px, 2); */
