--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -70,38 +70,30 @@
 
 .advantages-item-title {
   font-family: Titan One;
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 41px;
+  @include font(400, 36px, 1.139);
   text-transform: uppercase;
   color: var(--dark-accent-color);
   margin-top: 0;
   margin-bottom: 20px;
   @media screen and (min-width: 772px) {
-    font-size: 48px;
-    line-height: 55px;
+    @include font(400, 48px, 1.146);
     margin-bottom: 13px;
   }
   @media screen and (min-width: 1280px) {
-    font-size: 58px;
-    line-height: 66px;
+    @include font(400, 58px, 1.138);
     margin-bottom: 15px;
   }
 }
 
 .advantages-item-text {
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 170%;
+  @include font(700, 12px, 1.7);
   color: var(--primary-text-color);
   margin: 0;
   @media screen and (min-width: 772px) {
-    font-size: 14px;
-    line-height: 174%;
+    @include font(700, 14px, 1.74);
   }
   @media screen and (min-width: 1280px) {
-    font-size: 16px;
-    line-height: 176%;
+    @include font(700, 16px, 1.76);
     letter-spacing: 0.02em;
   }
 }
