--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,15 +1,45 @@
 <section class="customer-rewievs">
-
     <div class="container">
         <h2 class="customer-rewievs-title visually-hidden">Отзывы покупателей</h2>
     <div class="customer-rewievs-div">
-        <p class="customer-rewievs-text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+        <div class=" slide">
+            <div class="customer-rewievs-pic1"></div>
+            <div class="cust-text">
+                <p class="customer-rewievs-text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                
+            </div>
+            <ul class="customer-rewievs-list">
+                <li class="customer-rewievs-list-item"> </li>
+                <li class="customer-rewievs-list-item"> </li>
+                <li class="customer-rewievs-list-item"> </li>
+            </ul>
+            <span class="customer-rewievs-info">Emily, Los Angeles</span> 
+        </div>
+        <div class=" slide">
+            <div class="customer-rewievs-pic2"></div>
+            <div class="cust-text">
+                <p class="customer-rewievs-text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                </div>
+                <ul class="customer-rewievs-list">
+                    <li class="customer-rewievs-list-item"> </li>
+                    <li class="customer-rewievs-list-item"> </li>
+                    <li class="customer-rewievs-list-item"> </li>
+                </ul>
+                <span class="customer-rewievs-info">Emily, Los Angeles</span> 
+        </div>
+        <div class="slide">
+            <div class="customer-rewievs-pic3"></div>
+            <div class="cust-text">
+                <p class="customer-rewievs-text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                </div>
+                <ul class="customer-rewievs-list">
+                    <li class="customer-rewievs-list-item"> </li>
+                    <li class="customer-rewievs-list-item"> </li>
+                    <li class="customer-rewievs-list-item"> </li>
+                </ul>
+                <span class="customer-rewievs-info">Emily, Los Angeles</span> 
+        </div>
+    
     </div>
-    <ul class="customer-rewievs-list">
-        <li class="customer-rewievs-list-item"> </li>
-        <li class="customer-rewievs-list-item"> </li>
-        <li class="customer-rewievs-list-item"> </li>
-    </ul>   
-    <span class="customer-rewievs-info">Emily, Los Angeles</span>
     </div>
-</section>  
+    </section>    
