fixed problem with btn

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -72,7 +72,7 @@
 .products-list-item {
   position: relative;
 
-  max-width: 280px;
+  width: 280px;
   height: 485px;
 
   padding-top: 161px;
@@ -143,9 +143,7 @@
   position: relative;
   text-align: center;
   color: $text-color;
-  max-width: 200px;
-  margin-left: auto;
-  margin-right: auto;
+
   margin-bottom: 30px;
   @include font($fs: 14px, $fw: 700, $lh: 21px, $ls: 0.04em);
 
@@ -204,12 +202,7 @@
   width: 40px;
   height: 40px;
   transition: background-color $time-hover linear, fill $time-hover linear;
-  @media screen and (min-width: 768px) {
-    margin-bottom: 40px;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 50px;
-  }
+
   &:hover,
   &focus {
     cursor: pointer;
