--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -45,10 +45,10 @@
         <div class="hero-rs-second">
             <ul class="list-places">
                 <li class="item-places milk-description">
-                    <span class="hero-places-number">16</span>cafes
+                    <p class="hero-places-number">16</p>cafes
                 </li>
                 <li class="item-places milk-description">
-                    <span class="hero-places-number">23</span>food trucks
+                    <p class="hero-places-number">23</p>food trucks
                 </li>
             </ul>
         
