--- a/src/sass/_page-hero.scss
+++ b/src/sass/_page-hero.scss
@@ -69,15 +69,28 @@
     line-height: 1.154;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    width: 220px;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
     color: $color-secondary;
+    position: relative;
+    z-index: 55;
+    &::before{
+      position: absolute;
+      display: block;
+      content: " ";
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      top: -12px;
+    right: -19px;
+      background-color: #fff;
+      z-index: -1;
+    }
   }
 
   .hero-tasty-img{
     position: absolute;
-    right: 20px;
-    bottom: 0;
+    right: 0px;
+    bottom: -28px;
     width: 168px;
   }
 
@@ -85,6 +98,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
   }
 
   .page-hero .container{
@@ -125,6 +139,17 @@
     display: flex;
     align-items: flex-end;
   }
+}
+
+@media screen and (min-width:1200px){
+
+  .page-hero{
+    padding-top: 74px;
+  }
+
+   .hero-tasty-img{
+     width: 293px;
+   }
 }
 
 .hero-description_right-side{
