--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,5 +1,5 @@
 .contacts-section {
-  padding: 0 50px 111px 50px;
+  padding-bottom: 111px;
   background: #fff5f6;
   margin-top: 170px;
   // position: relative;
@@ -142,8 +142,6 @@
 
 @media screen and (min-width: 768px) {
   .contacts-section {
-    padding: 0 34px 158px 34px;
-    // Интересно получается - верстать надо от 768, а секция 772.(убрал паддинги по 2рх)
     margin-top: 197px;
   }
   .contacts-container {
@@ -196,24 +194,20 @@
 
 @media screen and (min-width: 1280px) {
   .contacts-section {
-    padding: 0 115px 165px 115px;
     margin-top: 234px;
     background-image: url('../images/img-contacts/bg-contact.png');
     background-repeat: no-repeat;
     background-position: 50% 0%;
 
-  //    @media screen and (min-device-pixel-ratio: 2),
-  // screen and (min-resolution: 192dpi),
-  // screen and (min-resolution: 2dppx) {
-  // & {
-  //   background-image: url('../images/img-contacts/bg-contact@2x.png');
-  // }
-  // }
-}
-  .contacts-container {
-    width: 1050px;
-    bottom: 102px;
+    @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+   .contacts-section {
+    background-image: url('../images/img-contacts/bg-contact@2x.png');
   }
+  }
+}
+
   .contacts-list {
     display: flex;
     flex-wrap: wrap;
