--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,7 +1,7 @@
 <section class="advanteges">
     <div class="container">
         <ul class="advantges_item">
-            <li class="advanteges_list">
+            <li class="advanteges_list list">
                 <source srcset="
                 ../images/img-advantages/icon-tablet1.png 1x, 
                 ../images/img-advantages/icon-tablet1@2x.png 2x"
@@ -17,6 +17,7 @@
                 ../images/img-advantages/icon-mobile1@2x.png 2x">
 
                 <img src="../images/img-advantages/icon-mobile1.png" alt="sanny milk"> </img>
+
                     <h2 class="title">721</h2>
                         <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
@@ -37,6 +38,7 @@
 
                 <img src="../images/img-advantages/icon-mobile2.png" alt="apple bucket"></img>
                     <h2 class="title">16kg</h2>
+
                         <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
 
@@ -58,6 +60,7 @@
                 <img src="../images/img-advantages/icon-mobile3.png" alt="hurts"></img>
 
                     <h2 class="title">84</h2>
+                    
                         <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
         </ul>
