завершив дрібні правки

--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -146,11 +146,11 @@
             <div class="soooooo-box">
                 <ul class="auxiliary-list list">
                     <li class="auxiliary-item">
-                        <h2 class="figures">16</h2>
+                        <p class="figures">16</p>
                         <p class="signature">cafes</p>
                     </li>
                     <li class="auxiliary-item">
-                        <h2 class="figures">23</h2>
+                        <p class="figures">23</p>
                         <p class="signature">food trucks</p>
                     </li>
                 </ul>
