--- a/src/sass/layout/_hero_header.scss
+++ b/src/sass/layout/_hero_header.scss
@@ -75,6 +75,7 @@
   min-width: 170px;
 
 
+
   // @media screen and(max-width:767px) {
   // max-width: 410px;
   // }
@@ -693,6 +694,11 @@
     .container-box{
     display: block;
     }
+
+.auxiliary-item{
+
+}
+
 .hero-content{
 
   &:after {
@@ -701,17 +707,19 @@
     border-radius: 50%;
     background: var(--label-color);
     transform: translate(-20%, 0);
-    top: -15px;
+    top: -20px;
     content: "";
     position: absolute;
 
     @media screen and (min-width: 768px) {
     width: 325px;
     height: 325px;
+    top: -30px;
     }
     @media screen and (min-width: 1280px) {
       width: 560px;
       height: 560px;
+      top: -50px;
     }
   }
 
@@ -726,23 +734,26 @@
   width: 100%;
   justify-content: space-between;
 
+  margin-top: 35px;
+
   @media screen and (min-width: 768px) {
     margin-top: -40px;
   }
   @media screen and (min-width: 1280px) {
+    margin-top: -70px;
   }
 }
 
   .left{
     z-index: 1;
-    // background-color: blue;
     // border: solid 5px;
-    // position: fixed;
 
     @media screen and (min-width: 768px) {
       margin-top: 40px;
     }
     @media screen and (min-width: 1280px) {
+      margin-top: 0;
+      padding-top: 85px;
     }
   }
 
@@ -757,8 +768,6 @@
     margin-left: 0;
     }
     @media screen and (min-width: 1280px) {
-      margin-bottom: 0;
-      margin-right: 30px;
     }
     
   }
@@ -773,14 +782,39 @@
     margin-top: 40px;
     }
     @media screen and (min-width: 1280px) {
+      margin-top: 0;
     }
   }
 
   .auxiliary-item{
+
     &:last-child{
     margin-top: 25px;
+    }      
+
+  }
+
+  .figures{
+    z-index: 14;
+    position: relative;
+
+    &::after {
+      z-index: -1;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #FFFFFF;;
+    transform: translate(-50%, 0);
+    content: "";
+    position: absolute;
+
+    @media screen and (min-width: 1280px) {
+    width: 30px;
+    height: 30px;
+     }
     }
   }
+  
 
   .figures{
     font-family: Titan One;
