--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,50 +2,58 @@
     <div class="header-container">
         <section class="masonry">
             <figure class="cell-1">
-                <img src="./images/gallery/1.jpg"
-                    alt="Food picture 1">
+
+                    <img src="./images/gallery/desk-img1.jpg" alt="Food picture 1">
             </figure>
             <figure class="cell-2">
-                <img src="./images/gallery/2.jpg"
-                    alt="Food picture 1">
+               
+                    <img src="./images/gallery/desk-img2.jpg" alt="Food picture 2">  
             </figure>
             <figure class="cell-3">
-                <img src="./images/gallery/3.jpg"
-                    alt="Food picture 1">
+                
+                    <img src="./images/gallery/desk-img3.jpg" alt="Food picture 3">
+
             </figure>
             <figure class="cell-4">
-                <img src="./images/gallery/4.jpg"
-                    alt="Food picture 1">
+               
+                    <img src="./images/gallery/desk-img4.jpg" alt="Food picture 4">
+
             </figure>
 
             <figure class="cell-5">
-                <img src="./images/gallery/5.jpg"
-                    alt="Food picture 1">
+               
+                    <img src="./images/gallery/desk-img5.jpg" alt="Food picture 5">
+
             </figure>
 
             <figure class="cell-6">
-                <img src="./images/gallery/6.jpg"
-                    alt="Food picture 1">
+               
+                    <img src="./images/gallery/desk-img6.jpg" alt="Food picture 6">
+
             </figure>
 
             <figure class="cell-7">
-                <img src="./images/gallery/7.jpg"
-                    alt="Food picture 1">
+                
+                    <img src="./images/gallery/desk-img7.jpg" alt="Food picture 7">
+
             </figure>
 
             <figure class="cell-8">
-                <img src="./images/gallery/8.jpg"
-                    alt="Food picture 1">
+               
+                    <img src="./images/gallery/desk-img8.jpg" alt="Food picture 8">
+
             </figure>
 
             <figure class="cell-9">
-                <img src="./images/gallery/9.jpg"
-                    alt="Food picture 1">
+ 
+                    <img src="./images/gallery/desk-img9.jpg" alt="Food picture 9">
+
             </figure>
 
             <figure class="cell-10">
-                <img src="./images/gallery/10.jpg"
-                    alt="Food picture 1">
+               
+                    <img src="./images/gallery/desk-img10.jpg" alt="Food picture 10">
+
             </figure>
 
         </section>
