--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -16,39 +16,25 @@
       <ul class="hero-description">
         <li class="hero-item">
           <picture class="hero-description-img">
-            <source
-              srcset="
+            <source srcset="
                 ./images/desk-hero-milk.webp    1x,
                 ./images/desk-hero-milk@2x.webp 2x
-              "
-              media="(min-width: 1280px)"
-              type="image/webp"
-            />
+              " media="(min-width: 1280px)" type="image/webp" />
 
-            <source
-              srcset="
+            <source srcset="
                 ./images/desk-hero-milk.png    1x,
                 ./images/desk-hero-milk@2x.png 2x
-              "
-              media="(min-width: 1280px)"
-            />
+              " media="(min-width: 1280px)" />
 
-            <source
-              srcset="
+            <source srcset="
                 ./images/tab-hero-milk.webp    1x,
                 ./images/tab-hero-milk@2x.webp 2x
-              "
-              media="(min-width: 768px)"
-              type="image/webp"
-            />
+              " media="(min-width: 768px)" type="image/webp" />
 
-            <source
-              srcset="
+            <source srcset="
                 ./images/tab-hero-milk.png    1x,
                 ./images/tab-hero-milk@2x.png 2x
-              "
-              media="(min-width: 768px)"
-            />
+              " media="(min-width: 768px)" />
 
             <img src="./images/tab-hero-milk.png" alt="Milk in a jug" />
           </picture>
@@ -70,38 +56,20 @@
     </div>
     <div class="hero-img">
       <picture class="hero-main-img">
-        <source
-          srcset="./images/desk-hero.webp 1x, ./images/desk-hero@2x.webp 2x"
-          media="(min-width: 1280px)"
-          type="image/webp"
-        />
+        <source srcset="./images/desk-hero.webp 1x, ./images/desk-hero@2x.webp 2x" media="(min-width: 1280px)"
+          type="image/webp" />
 
-        <source
-          srcset="./images/desk-hero.png 1x, ./images/desk-hero@2x.png 2x"
-          media="(min-width: 1280px)"
-        />
+        <source srcset="./images/desk-hero.png 1x, ./images/desk-hero@2x.png 2x" media="(min-width: 1280px)" />
 
-        <source
-          srcset="./images/tab-hero.webp 1x, ./images/tab-hero@2x.webp 2x"
-          media="(min-width: 768px)"
-          type="image/webp"
-        />
+        <source srcset="./images/tab-hero.webp 1x, ./images/tab-hero@2x.webp 2x" media="(min-width: 768px)"
+          type="image/webp" />
 
-        <source
-          srcset="./images/tab-hero.png 1x, ./images/tab-hero@2x.png 2x"
-          media="(min-width: 768px)"
-        />
+        <source srcset="./images/tab-hero.png 1x, ./images/tab-hero@2x.png 2x" media="(min-width: 768px)" />
 
-        <source
-          srcset="./images/mob-hero.webp 1x, ./images/mob-hero@2x.webp 2x"
-          media="(max-width: 767px)"
-          type="image/webp"
-        />
+        <source srcset="./images/mob-hero.webp 1x, ./images/mob-hero@2x.webp 2x" media="(max-width: 767px)"
+          type="image/webp" />
 
-        <source
-          srcset="./images/mob-hero.png 1x, ./images/mob-hero@2x.png 2x"
-          media="(max-width: 767px)"
-        />
+        <source srcset="./images/mob-hero.png 1x, ./images/mob-hero@2x.png 2x" media="(max-width: 767px)" />
 
         <img src="./images/mob-hero.png" alt="Ice cream" />
       </picture>
@@ -123,39 +91,25 @@
       </ul>
       <div class="hero-accent">
         <picture class="hero-accent-img">
-          <source
-            srcset="
+          <source srcset="
               ./images/desk-hero-girl.webp    1x,
               ./images/desk-hero-girl@2x.webp 2x
-            "
-            media="(min-width: 1280px)"
-            type="image/webp"
-          />
+            " media="(min-width: 1280px)" type="image/webp" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/desk-hero-girl.png    1x,
               ./images/desk-hero-girl@2x.png 2x
-            "
-            media="(min-width: 1280px)"
-          />
+            " media="(min-width: 1280px)" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/tab-hero-girl.webp    1x,
               ./images/tab-hero-girl@2x.webp 2x
-            "
-            media="(min-width: 768px)"
-            type="image/webp"
-          />
+            " media="(min-width: 768px)" type="image/webp" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/tab-hero-girl.png    1x,
               ./images/tab-hero-girl@2x.png 2x
-            "
-            media="(min-width: 768px)"
-          />
+            " media="(min-width: 768px)" />
 
           <img src="./images/tab-hero-girl.png" alt="Girl with ice crem" />
         </picture>
