--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,36 +1,37 @@
 .gallery {
     box-sizing: border-box;
     font-size: 62.5%;
-   
     margin: 0;
     padding: 0; 
+    .header-container {
+      padding: 0 12px;
+    }
+    
 }
 
 .masonry {
   width: 100%;
-  height: 430px;
-  padding: 1rem;
 
   display: grid;
   grid-template-columns: repeat(21, 1fr);
   grid-template-rows: repeat(9, 1fr);
 
-  row-gap: 1rem;
-  column-gap: 1rem;
+  row-gap: 0.5em;
+  column-gap: 0.5em;
 
-img {
-  object-fit: cover;
-  border-radius: 10px;
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-figure {
+  img {
+    object-fit: cover;
+    border-radius: 10px;
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-}
+  }
+
+  figure {
+      margin: 0;
+      padding: 0;
+      box-sizing: inherit;
+  }
 }
 
 .cell-1 {
@@ -83,4 +84,16 @@ figure {
   grid-column: 19 / 22;
   grid-row: 4 / 8;
 }
+// @media screen and (min-width: 768px) {
+//   .masonry {
+//   width: 100%;
+
+// }
+// }
+// @media screen and (min-width: 1280px) {
+//   .masonry {
+//   width: 100%;
+
+// }
+// }
 
