--- a/src/slick/slick-theme.css
+++ b/src/slick/slick-theme.css
@@ -177,41 +177,15 @@
 }
 .slick-dots li button
 {
-    /* font-family: 'slick';
-    font-size: 6px;
-    line-height: 20px;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 20px;
-    height: 20px;
-
-    content: '•';
-    text-align: center;
-
-    opacity: .25;
-    color: black;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale; */
-    content: '';
-    font-size: 0;
-    width: 10px;
-    height: 10px;
-    color:blue;
-    background-color: blue;
+    width: 12px;
+    height: 12px;
+    background-color: #D9D9D9;
     border-radius: 50%;
 }
-/* .slick-dots li.slick-active button::before
-{
-    opacity: .75;
-    background-image: url(../../eqw/images/Vector.png);
- 
-} */
 
 .slick-dots li.slick-active button{
     content: '';
-    background-image: url(/images/symbol-defs.svg#icon-Vector-1);
+    background-color: #fff;
+    background-image: url(../../src/images/home.svg);
+    background-size: cover;
 }
