жду фотки для декстопа

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,10 +2,10 @@
     <div class="container">
         <ul class="advantges_item">
             <li class="advanteges_list list">
-                <source srcset="
+                <!-- <source srcset="
                 ../images/img-advantages/icon-tablet1.png 1x, 
                 ../images/img-advantages/icon-tablet1@2x.png 2x"
-                media="(min-width:1200px)">
+                media="(min-width:1200px)"> -->
 
                 <source srcset="
                 ../images/img-advantages/icon-tablet1.png 1x, 
@@ -22,10 +22,10 @@
                         <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advanteges_list">
-                <source srcset="
+                <!-- <source srcset="
                 ../images/img-advantages/icon-tablet2.png 1x, 
                 ../images/img-advantages/icon-tablet2@2x.png 2x"
-                media="(min-width:1200px)">
+                media="(min-width:1200px)"> -->
 
                 <source srcset="
                 ../images/img-advantages/icon-tablet2.png 1x, 
@@ -43,10 +43,10 @@
             </li>
 
             <li class="advanteges_list">
-                <source srcset="
+                <!-- <source srcset="
                 ../images/img-advantages/icon-tablet3.png 1x, 
                 ../images/img-advantages/icon-tablet3@2x.png 2x"
-                media="(min-width:1200px)">
+                media="(min-width:1200px)"> -->
 
                 <source srcset="
                 ../images/img-advantages/icon-tablet3.png 1x, 
