Добавил модальное окно для Деск

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -36,7 +36,7 @@
                         Aliquam erat volutpat. Aenean accumsan.
                     </p>
                 </div>
-                <button class="main-button about-btn" type="button">Read more<span
+                <button class="main-button about-btn" type="button" data-modal-open>Read more<span
                         class="arrow-btn">&gt;</span></button>
             </div>
         </div>
