--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,12 +15,10 @@
         </div>
         <div class="hero-btn-position">
             <button type="button" class="hero-btn hero-products-btn">
-                Products
-                <a href="#products"></a>
+                <a href="#products" class="hero-products-link">Products</a>
             </button>
             <button type="button" class="hero-btn hero-how-btn">
-                How it’s made?
-                <a href="#how-made"></a>
+                <a href="#how-made" class="hero-how-link">How it’s made?</a>
             </button>
         </div>
         <div class="hero-bio-position">
