--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,13 +15,13 @@
                     <a class="navigation-list-link link" href="#">About us</a>
                 </li>
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link link" href="#">How it's made?</a>
+                    <a class="navigation-list-link link" href="#how-it's-made">How it's made?</a>
                 </li>
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link link" href="#">Our products</a>
+                    <a class="navigation-list-link link" href="#products">Our products</a>
                 </li>
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link link" href="#">Contact</a>
+                    <a class="navigation-list-link link" href="#contacts">Contact</a>
                 </li>
             </ul>
         </nav>
