--- a/src/slick/slick-theme.css
+++ b/src/slick/slick-theme.css
@@ -187,5 +187,8 @@
     content: '';
     background-color: #fff;
     background-image: url(../../src/images/home.svg);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 0%;
+    background-position: center;
 }
