--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,3 +1,8 @@
+.contacts {
+    background-image: linear-gradient(to bottom, rgba( 255, 255, 255, 0.4),
+     rgba(255, 245, 246, 0.4));
+    }
+
 .section-padding {
   padding-top: 86px;
   padding-bottom: 113px;
@@ -149,6 +154,12 @@
 }
 
 @media screen and (min-width: 768px) {
+  .contacts {
+    background-image: linear-gradient(to bottom, rgba( 255, 255, 255, 0.4),
+     rgba(255, 245, 246, 0.4));
+    }
+
+
   .section-padding {
     padding-top: 119px;
     padding-bottom: 165px;
