правки всплывающего окна

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -20,7 +20,7 @@
                 <use href="./images/sprite.svg#icon-arrow-right"></use>
               </svg>
               <div class="dropdown-content">
-                <p>
+                <p class="dropdown-description">
                   В каждую упаковку мы добавляем горсть грецких орехов. Как
                   много их будет зависит от того, кто делал мороженное.
                 </p>
@@ -47,7 +47,7 @@
                 <use href="./images/sprite.svg#icon-arrow-right"></use>
               </svg>
               <div class="dropdown-content">
-                <p>
+                <p class="dropdown-description">
                   В каждую упаковку мы добавляем горсть грецких орехов. Как
                   много их будет зависит от того, кто делал мороженное.
                 </p>
@@ -76,7 +76,7 @@
                 <use href="./images/sprite.svg#icon-arrow-right"></use>
               </svg>
               <div class="dropdown-content">
-                <p>
+                <p class="dropdown-description">
                   В каждую упаковку мы добавляем горсть грецких орехов. Как
                   много их будет зависит от того, кто делал мороженное.
                 </p>
