--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -232,22 +232,38 @@
   fill: $text-white-color;
 }
 .dropdown {
-    position: relative;
     display: inline-block;
 }
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: $text-white-color;
-    min-width: auto;
-    height: auto;
+    background-color: chocolate;
+    min-width: 100%;
+    height: 50%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    bottom: 100%;
+    left: 0;
+    top: 50%;
+    border-radius: 24px;
 }
-.dropdown-content p {
-    color: black;
+.dropdown-description {
+    color: $text-white-color;
     text-decoration: none;
     display: block;
+    font-family: DM Sans;
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.15;
+letter-spacing: 0.04em;
+padding: 50px 30px;
 }
-.dropdown-content p:hover {background-color: $text-white-color;}
+.dropdown-description:hover {background-color: $text-white-color;}
 .dropdown:hover .dropdown-content {display: block;}
+@media screen and (min-width: 1280px) {
+  .products-title-title {
+    font-size: 30px;
+    line-height: 1.15;
+  }
+}
