--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -19,9 +19,9 @@
                 <img src="../images/img-advantages/icon-mobile1.png" alt="sanny milk"> </img>
 
                     <h2 class="title">721</h2>
-                        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                        <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advanteges_list">
+            <li class="advanteges_list list">
                 <!-- <source srcset="
                 ../images/img-advantages/icon-tablet2.png 1x, 
                 ../images/img-advantages/icon-tablet2@2x.png 2x"
@@ -39,10 +39,10 @@
                 <img src="../images/img-advantages/icon-mobile2.png" alt="apple bucket"></img>
                     <h2 class="title">16kg</h2>
 
-                        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                        <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
 
-            <li class="advanteges_list">
+            <li class="advanteges_list list">
                 <!-- <source srcset="
                 ../images/img-advantages/icon-tablet3.png 1x, 
                 ../images/img-advantages/icon-tablet3@2x.png 2x"
@@ -61,7 +61,7 @@
 
                     <h2 class="title">84</h2>
                     
-                        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                        <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
         </ul>
     </div>
