--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -1,6 +1,22 @@
-.container .advantges_item {
-    padding-right: 70px;
-    position: absolute;
+.advanteges_list {
+    margin-right: 70px;
+    margin-bottom: 38px;
     width: 230px;
     height: 156px;
+
+    & .container {
+    position: absolute;
+    background-color: var(--accent-bgc);
+    }
+    &:not(:nth-child(3n)) {
+        margin-left: 20px;
+    }
+}
+.advanteges .title {
+    padding-top: 16px;
+}
+
+.advanteges-text {
+    margin: 0;
+    padding: 0;
 }
