--- a/src/sass/_about-modal.scss
+++ b/src/sass/_about-modal.scss
@@ -6,12 +6,12 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: all 250ms linear;
+    transition: all 400ms linear;
 }
 .about-modal {
   position: absolute;
-  width: 500px;
-  height: 581px;
+  max-width: 500px;
+  max-width: 581px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -93,4 +93,17 @@ color: #907E82;
     left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+@keyframes milk{
+    0%{
+transform: rotate(0deg);
+    }
+
+
+    100%{
+transform: rotate(360deg);
+    } 
+}
+.about-bg-modal {
+    animation-name: milk;
 }
