--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -5,7 +5,7 @@
   background-image: url(../images/about/m-milk.png);
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: bottom;
+  background-position-y: bottom;
   @media screen and (min-width: 768px) {
     padding-top: 130px;
   }
