--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,3 +1,4 @@
+
 <section class="advanteges">
         <div class="container">
         <ul class="advantges_item">
@@ -8,15 +9,15 @@
                 media="(min-width:1200px)"> -->
 
                 <source srcset="
-                ../images/img-advantages/icon-tablet1.png 1x, 
-                ../images/img-advantages/icon-tablet1@2x.png 2x"
+                ./images/img-advantages/icon-tablet1.png 1x, 
+                ./images/img-advantages/icon-tablet1@2x.png 2x"
                 media="(min-width:768px)">
 
                 <source srcset="
-                ../images/img-advantages/icon-mobile1.png 1x, 
-                ../images/img-advantages/icon-mobile1@2x.png 2x">
+                ./images/img-advantages/icon-mobile1.png 1x, 
+                ./images/img-advantages/icon-mobile1@2x.png 2x">
 
-                <img src="../images/img-advantages/icon-mobile1.png" alt="sanny milk"> 
+                <img src="./images/img-advantages/icon-mobile1.png" alt="sanny milk"> 
 
                     <h2 class="title">721</h2>
                         <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
@@ -28,15 +29,15 @@
                 media="(min-width:1200px)"> -->
 
                 <source srcset="
-                ../images/img-advantages/icon-tablet2.png 1x, 
-                ../images/img-advantages/icon-tablet2@2x.png 2x"
+                ./images/img-advantages/icon-tablet2.png 1x, 
+                ./images/img-advantages/icon-tablet2@2x.png 2x"
                 media="(min-width:768px)">
 
                 <source srcset="
-                ../images/img-advantages/icon-mobile2.png 1x, 
-                ../images/img-advantages/icon-mobile2@2x.png 2x">
+                ./images/img-advantages/icon-mobile2.png 1x, 
+                ./images/img-advantages/icon-mobile2@2x.png 2x">
 
-                <img src="../images/img-advantages/icon-mobile2.png" alt="apple bucket">
+                <img src="./images/img-advantages/icon-mobile2.png" alt="apple bucket">
                     <h2 class="title">16kg</h2>
 
                         <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
@@ -49,15 +50,15 @@
                 media="(min-width:1200px)"> -->
 
                 <source srcset="
-                ../images/img-advantages/icon-tablet3.png 1x, 
-                ../images/img-advantages/icon-tablet3@2x.png 2x"
+                ./images/img-advantages/icon-tablet3.png 1x, 
+                ./images/img-advantages/icon-tablet3@2x.png 2x"
                 media="(min-width:768px)">
 
                 <source srcset="
-                ../images/img-advantages/icon-mobile3.png 1x, 
-                ../images/img-advantages/icon-mobile3@2x.png 2x">
+                ./images/img-advantages/icon-mobile3.png 1x, 
+                ./images/img-advantages/icon-mobile3@2x.png 2x">
 
-                <img src="../images/img-advantages/icon-mobile3.png" alt="hurts">
+                <img src="./images/img-advantages/icon-mobile3.png" alt="hurts">
 
                     <h2 class="title">84</h2>
                     
