--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -3,17 +3,20 @@
     margin-bottom: 38px;
     width: 230px;
     height: 156px;
+}
 
-    & .container {
+.advanteges {
     position: absolute;
     background-color: var(--accent-bgc);
-    }
-    &:not(:nth-child(3n)) {
-        margin-left: 20px;
-    }
 }
-.advanteges .title {
+.advanteges_list:not(:last-child) {
+        margin-left: 20px;
+}
+
+.advanteges,
+.title {
     padding-top: 16px;
+    text-align: left;
 }
 
 .advanteges-text {
