пофиксил опечатку марджин-паддинг

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -124,7 +124,7 @@
   }
 
   &-buttons {
-    margin-bottom: 10px;
+    padding-bottom: 10px;
   }
 }
 
@@ -524,8 +524,8 @@
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-list-buttons-margin {
-    margin-left: 15px;
+  .contacts-list-buttons-padding {
+    padding-left: 15px;
 
   }
 }
