--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,16 +1,11 @@
 <footer class="footer">
-    <div class="container">
-        <div class="footer-title">
-            <div class="footer-title-thumb">
-                <!-- <p class="footer-secondary-title">homemade ice cream made</p> -->
-                <a class="footer-secondary-title" href="./index.html">homemade ice cream made</a> 
-            </div>
-            <div class="footer-title-thumb">
-                <!-- <p class="footer-main-title">with passion</p> -->
-                <a class="footer-main-title" href="./index.html">with passion</a> 
-            </div>
+    <div class="container footer">
+        <div class="footer-title-thumb">
+            <a class="footer-main-title" href="./index.html"> homemade ice cream made 
+                <br> <p class="footer-secondary-title" > with passion </p>
+            </a> 
         </div>
-    <div class="footer-thumb">
+        <div class="footer-thumb">
         <div class="social-links-footer">
             <ul class="social-links-footer-list">
                 <li class="social-links-footer-item">
@@ -40,13 +35,11 @@
             <p class="footer-contacts-text">Feel free to contact</p>
             <a class="footer-contacts-tel" href="tel:+610383766284">+61 (0) 383 766 284</a>
         </div>
-    </div>
+        </div>
     </div>
     <div class="footer-rights">
         <div class="footer-rights-thumb">
             <p class="footer-rights-text">© 2019 - IceCream.All Rights Reserved. </p>
         </div>
-
     </div>
-
 </footer>
