--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -43,7 +43,6 @@
 }
 
 .footer-contacts {
-  margin-bottom: 43px;
   margin-left: auto;
   display: flex;
   align-items: center;
@@ -117,19 +116,6 @@
   color: $color-light-dark;
 }
 
-.footer-title {
-  margin-bottom: 43px;
-
-  @media screen and (min-width: 768px) {
-  margin-right: 92px;
-  margin-bottom: 91px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 97px;
-    }
-}
-
 .footer-thumb{
   @media screen and (min-width: 768px) {
     margin-left: auto;
@@ -141,6 +127,7 @@
 
   @media screen and (min-width: 768px) {
     max-width: 330px;
+    margin-right: 92px;
     }
 
     @media screen and (min-width: 1200px) {
@@ -148,11 +135,10 @@
       }
 }
 
-.footer-secondary-title {
+.footer-main-title {
   font-family: $title-font-family;
   text-transform: uppercase;
   color: $bg-ice-cream;
-  margin-bottom: 17px;
   @include font(18px, 400, 21px, 0.02em);
 
   @media screen and (min-width: 768px) {
@@ -164,18 +150,20 @@
 
 }
 
-.footer-main-title {
+.footer-secondary-title {
   font-family: $title-font-family;
   text-transform: uppercase;
   color: $color-secondary;
   @include font(34px, 400, 39px, 0.04em);
+  margin-bottom: 17px;
 
   @media screen and (min-width: 768px) {
     @include font(48px, 400, 55px, 0.06em);
+    margin-bottom: 16px;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1200px) {
       @include font(58px, 400, 66px, 0.06em);
+      margin-top: 15px;
       }  
 }
-
