--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,15 +1,13 @@
 .page-header {
   background: transparent;
-  display: flex; 
+  display: flex;
   justify-content: space-between;
 
-  
-   & .container {
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     flex-wrap: nowrap;
-   }   
+  & .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .site-nav {
@@ -23,7 +21,7 @@
 }
 
 .logo-img {
-  position: absolute; 
+  position: absolute;
   top: 0;
   left: 0;
   transform: translateY(17%);
@@ -32,13 +30,13 @@
 }
 
 .logo-name {
-   font-size: 26px;
-  color: #D41443;
+  font-size: 26px;
+  color: #d41443;
   font-weight: 400;
   font-family: 'Titan One';
   line-height: 95.5%;
 }
-    
+
 @media screen and (max-width: 767px) {
   .mdl-btn {
     display: none;
@@ -46,40 +44,33 @@
 }
 
 @media screen and (max-width: 1279px) {
-  
-  
   .site-nav-list {
     display: none;
   }
 
-
-.burger-btn {
-  width: 40px;
-  height: 24px;
-  background-color: teal;
-  border: none;
-  padding: 0px;
-}
+  .burger-btn {
+    width: 40px;
+    height: 24px;
+    background-color: teal;
+    border: none;
+    padding: 0px;
+  }
 
   .burger-btn-icon {
-   
     width: 40px;
-    height:24px;
-    fill: #D41443;
-  } 
+    height: 24px;
+    fill: #d41443;
+  }
 }
 
 @media screen and (min-with: 768px) {
-
-
   .mdl-btn {
     display: inline-block;
     text-align: center;
-    font-family: DM Sans; 
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.312;
-    color: #D41443;
- }
-
+    color: #d41443;
+  }
 }
