--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -19,7 +19,7 @@
 
                 <img src="./images/img-advantages/icon-mobile1.png" alt="sanny milk"> 
 
-                    <h2 class="title">721</h2>
+                    <h2 class="advanteges_title title">721</h2>
                         <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advanteges_list list">
