--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -1,22 +1,33 @@
 .advanteges_list {
     margin-right: 70px;
-    margin-bottom: 38px;
+    margin-left: 20px;
     width: 230px;
     height: 156px;
 }
-
+.advanteges_list:not(:last-child) {
+    margin-bottom: 38px;
+}
 .advanteges {
     position: absolute;
     background-color: var(--accent-bgc);
-}
-.advanteges_list:not(:last-child) {
-        margin-left: 20px;
+    background-size: contain;
+    background-repeat: no-repeat;
+     background-position: center 90%;
 }
 
 .advanteges,
 .title {
     padding-top: 16px;
     text-align: left;
+}
+.advanteges_title {
+position: absolute;
+width: 98px;
+height: 56px;
+font-size: 36px;
+line-height: 1.13;
+letter-spacing: 0.04em;
+text-transform: uppercase;
 }
 
 .advanteges-text {
