Пробую скрипт на меню

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages-section">
+<section class="advantages-section" id="about-us-link">
     <div class="container">
         <h2 class="advantages-title visually-hidden">Advantages</h2>
         <ul class="advantages-list">
