--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,15 +31,15 @@
                     <img class="logo-ice" src="./images/logo/logo.png" alt="Logo of our brand - IceCream">
             </picture>
         </a>
-            <nav class="navigation">
+            <nav class="navigation" id="menu">
 
             
                 <ul class="site-nav list">
-                    <li class="site-nav__item"><a class="site-nav__link link--current link" href="#">Home</a></li>
-                    <li class="site-nav__item"><a class="site-nav__link  link" href="#">About us</a></li>
-                    <li class="site-nav__item"><a class="site-nav__link  link" href="#">How it’s made?</a></li>
-                    <li class="site-nav__item"><a class="site-nav__link  link" href="#">Our products</a></li>
-                    <li class="site-nav__item"><a class="site-nav__link  link" href="#">Contact</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link link--current link"  href="#home-link">Home</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link  link" href="#about-us-link">About us</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link  link" href="#how-link">How it’s made?</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link  link" href="#our-products-link">Our products</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link  link" href="#contacts-link">Contact</a></li>
                 </ul>
             
             </nav>
@@ -74,11 +74,11 @@
     </button>
 
     <ul class="mobile__menu__nav list">
-        <li class="nav__item"><a class="mobile__menu__item nav__link link--current link" href="#">Home</a></li>
-        <li class="nav__item"><a class="mobile__menu__item nav__link  link" href="#">About us</a></li>
-        <li class="nav__item"><a class="mobile__menu__item nav__link  link" href="#">How it’s made?</a></li>
-        <li class="nav__item"><a class="mobile__menu__item nav__link  link" href="#">Our products</a></li>
-        <li class="nav__item"><a class="mobile__menu__item nav__link  link" href="#">Contact</a></li>
+        <li class="nav__item"><a class="mobile__menu__item nav__link link--current link" href="#home-link">Home</a></li>
+        <li class="nav__item"><a class="mobile__menu__item nav__link  link" href="#about-us-link">About us</a></li>
+        <li class="nav__item"><a class="mobile__menu__item nav__link  link" href="#how-link">How it’s made?</a></li>
+        <li class="nav__item"><a class="mobile__menu__item nav__link  link" href="#our-products-link">Our products</a></li>
+        <li class="nav__item"><a class="mobile__menu__item nav__link  link" href="#contacts-link">Contact</a></li>
     </ul>
 
  </div>
