--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="our-products-link">
     <div class="products-container">
         <p class="products-label">100% natural</p>
         <h2 class="products-title">products</h2>
