--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about-section">
+<section class="about-section" id="how-link">
     <div class="container">
         <p class="about-label">Tradition and love</p>
         <h2 class="about-title">How it's made</h2>
