доделал галерею и стрелку на кнопке

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -33,7 +33,11 @@
           <use href="./images/sprite.svg#icon-burger"></use>
         </svg>
       </button>
-      <button class="buy" type="button" data-modal-open>Buy now ></button>
+      <button class="buy" type="button" data-modal-open>Buy now
+        <svg class="buy-arrow">
+          <use href="./images/sprite.svg#icon-arrow-btn"></use>
+        </svg>
+      </button>
     </div>
   </div>
 </header>
