--- a/src/sass/_hero-header.scss
+++ b/src/sass/_hero-header.scss
@@ -52,6 +52,14 @@
     &:focus {
       background: #ecebeb;
     }
+    .buy-arrow {
+
+width: 7px;
+height: 10px;
+fill: $text-red-color;
+margin-left: 12px;
+    }
+
   }
   .nav-link {
     color: $text-white-color;
