--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -3,6 +3,19 @@
     font-size: 62.5%;
     margin: 0;
     padding: 0; 
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1600px;
+    background: $bg-secondary-color;
+    // background-size: contain;
+
+    background-image: linear-gradient(
+    to bottom,
+    $bg-secondary-color 40%,
+    $text-white-color 60%,
+ 
+  );
+
     .header-container {
       padding: 0 12px;
     }
