--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -7,24 +7,20 @@
     margin-right: auto;
     max-width: 1600px;
     background: $bg-secondary-color;
-    // background-size: contain;
 
     background-image: linear-gradient(
     to bottom,
-    $bg-secondary-color 40%,
-    $text-white-color 60%,
- 
-  );
+    $bg-secondary-color 45%,
+    $text-white-color 45%,
+    $text-white-color 60%, );
 
     .header-container {
       padding: 0 12px;
     }
-    
 }
 
 .masonry {
   width: 100%;
-
   display: grid;
   grid-template-columns: repeat(21, 1fr);
   grid-template-rows: repeat(9, 1fr);
