dropdown menu on ice-cream

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -317,9 +317,12 @@ color: var(--label-color);
   color: var(--text-color-dark-bg);
   @media screen and(min-width:768px) {
     padding:0 12px;
+    line-height: 176%;
   }
   @media screen and(min-width:1280px) {
     padding:0 44px;
+    font-size: 16px;
+line-height: 176%;
   }
 
   &::before  {
@@ -370,3 +373,41 @@ color: var(--label-color);
 
 }
 
+// dropdown-menu
+
+.dropdown-menu {
+    position: relative;
+    display: inline-block;}
+    
+.dropdown-description {
+    position: absolute;
+    display: none;
+    left: -300%;
+    bottom: 100%;
+    background-color: var(--text-color-dark-bg);
+    width: 280px;
+    margin-bottom: 30px;
+
+    font-family: var(--text-font);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 152%;
+    color: var(--main-dark-color);
+
+    @media screen and(min-width:768px) {
+      left: -225%;
+    width: 220px;
+    line-height: 176%;
+  }
+    @media screen and(min-width:1280px) {
+      left: -368%;
+    width: 334px;
+    font-size: 16px;
+    line-height: 176%;
+  }
+
+.dropdown-menu:hover  &{
+    display: block;
+}
+
+}
