--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -16,29 +16,35 @@
                 <p class="customer-reviews--comentator">Emily, Los Angeles</p>
                    
         </div>
-        <!-- <div class="customer-reviews--slide">
+        <div class="customer-reviews--slide">
             <img class="customer-reviews--img" src="./images/img-customer/girl2.png" alt="girl">
             <div class="customer-reviews--thumb">
+                <svg class="customer-reviews--logo-kav">
+                    <use href="./images/sprite/sprite_projects.svg#kav"></use>
+                </svg>
                 <p class="customer-reviews--coments">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
                     hendrerit nulla quam nunc, accumsan
                     congue. Lorem ipsum primis in nibh vel risus.</p>
                 <div class="dot"></div>
                 
             </div>
-            <b class="customer-reviews--comentator">Emily, Los Angeles</b>
+            <p class="customer-reviews--comentator">Emily, Los Angeles</p>
             
         </div>
         <div class="customer-reviews--slide">
             <img class="customer-reviews--img" src="./images/img-customer/girl3.png" alt="girl">
             <div class="customer-reviews--thumb">
-            <p class="customer-reviews--coments">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+            <svg class="customer-reviews--logo-kav">
+                <use href="./images/sprite/sprite_projects.svg#kav"></use>
+            </svg>
+                <p class="customer-reviews--coments">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
                 hendrerit nulla quam nunc, accumsan
                 congue. Lorem ipsum primis in nibh vel risus.</p>
                 <div class="dot"></div>
                 
             
         </div>
-        <b class="customer-reviews--comentator">Emily, Los Angeles</b>
-        </div> -->
+        <p class="customer-reviews--comentator">Emily, Los Angeles</p>
+        </div>
     </div>
 </section>
