changed breakpoints to 1280, added grid instead of flex in advantages section

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -63,10 +63,11 @@
         font-size: 48px;
     }
     .advantages-container {
-        display: flex;
+        display: grid;
+        grid-template-columns: 180px 180px 180px;
+        grid-gap: 60px;
     }
     .advantages-block-item {
-        margin-right: 60px;
 
         &:nth-child(2) {
             margin-top: 36px;
@@ -74,9 +75,12 @@
     }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
     .advantages {
         padding-bottom: 139px;
+    }
+    .advantages-container {
+        grid-template-columns: 1fr 1fr 1fr;
     }
     .advantages-heading {
         font-size: 58px;
@@ -85,7 +89,6 @@
         font-size: 16px;
     }
     .advantages-block-item {
-        margin-right: 30px;
         :nth-child(2) {
             margin: 40px 0 0 15px;
         }
