--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -1,11 +1,13 @@
 .advanteges_list {
     margin-right: 70px;
     margin-left: 20px;
+    margin-top: 38px;
     width: 230px;
     height: 156px;
-}
-.advanteges_list:not(:last-child) {
+
+    &:not(:last-child) {
     margin-bottom: 38px;
+    }
 }
 .advanteges {
     position: absolute;
@@ -31,7 +33,106 @@ text-transform: uppercase;
 }
 
 .advanteges-text {
-    margin: 0;
-    padding: 0;
+    position: absolute;
+    width: 230px;
+    height: 36px;
+    left: 20px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.70;
     color: var(--primary-black-color);
+}
+
+@media screen and (min-width: 768px) {
+    .advanteges_list {
+        margin-top: 66px;
+        margin-bottom: 136px;
+        margin-left: 36px;
+        width: 180px;
+        height: 226px;
+        display: flex;
+        flex-wrap: wrap;
+   
+        &:not(:last-child) {
+        margin-right: 60px;
+        }
+    }
+    .advanteges,
+    .title {
+        padding-top: 36px;
+        padding-bottom: 13px;
+        text-align: left;
+    }
+    .advanteges_title {
+        position: absolute;
+        width: 98px;
+        height: 56px;
+        left: 34px;
+        font-weight: 400;
+        font-size: 48px;
+        line-height: 1.14;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+    }
+    
+    .advanteges-text {
+        position: absolute;
+        width: 180px;
+        height: 71px;
+        left: 34px;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.74;
+        color: var(--primary-black-color);
+    }
+}
+@media screen and (min-width: 1280px) {
+    .advanteges_list {
+        margin-top: 39px;
+        margin-bottom: 139px;
+        margin-left: 115px;
+        width: 330px;
+        height: 222px;
+        display: flex;
+        flex-wrap: wrap;
+   
+        &:not(:last-child) {
+        margin-right: 30px;
+        }
+    }
+    .advanteges,
+    .title {
+        padding-top: 40px;
+        padding-bottom: 15px;
+        text-align: left;
+    }
+    .advanteges_title {
+        position: absolute;
+        width: 98px;
+        height: 65px;
+        font-weight: 400;
+        font-size: 58px;
+        line-height: 1.13;
+        // text-align: right;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+    }
+    
+    .advanteges-text {
+        position: absolute;
+        width: 330px;
+        height: 52px;
+        left: 115px;
+        top: 2830px;
+
+        font-family: DM Sans;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 176%;
+        /* or 28px */
+
+        letter-spacing: 0.02em;
+        color: var(--primary-black-color);
+    }
 }
