--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -122,16 +122,9 @@ text-transform: uppercase;
         position: absolute;
         width: 330px;
         height: 52px;
-        left: 115px;
-        top: 2830px;
-
-        font-family: DM Sans;
-        font-style: normal;
-        font-weight: bold;
+        font-weight: 700;
         font-size: 16px;
-        line-height: 176%;
-        /* or 28px */
-
+        line-height: 1.76;
         letter-spacing: 0.02em;
         color: var(--primary-black-color);
     }
