--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -131,6 +131,11 @@
     margin-right: 8px;
 
     transition: all var(--time) var(--delay);
+
+    @media screen and (min-width: 1200px) {
+      width: 104px;
+    height: 40px;
+    }
   }
 
   .btn__products:hover {
@@ -141,6 +146,10 @@
   @include fw_fs_line-height-calc(400, 8, 10);
  
   text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    @include fw_fs_line-height-calc(400, 14, 18);
+  }
 }
 
 .btn__made {
@@ -161,6 +170,11 @@
     margin-right: 0 auto;
 
     transition: all var(--time) var(--delay);
+
+    @media screen and (min-width: 1200px) {
+      width: 138px;
+    height: 40px;
+    }
   }
 
     // .btn__order:hover,
@@ -172,6 +186,10 @@
   @include fw_fs_line-height-calc(400, 8, 10);
  
   text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    @include fw_fs_line-height-calc(400, 14, 18);
+  }
   
 }
 
