--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,7 +12,8 @@
 @import './layout/hero';
 @import './layout/products';
 @import './layout/about';
-@import './layout/customer';
+@import './layout/advanteges';
 @import './layout/gallery';
+@import './layout/customer';
 @import './layout/contacts';
 @import './layout/footer';
